<resources>
    <string name="app_name">Memorandum</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_showMemosInMap">Mostra nella mappa</string>
    <string name="active_memos_fragment_label">Promemoria attivi</string>
    <string name="memos_map_fragment_label">Mappa promemoria</string>
    <string name="no_active_memo">Non ci sono promemoria attivi\nAggingine uno</string>
    <string name="memo_detail_fragment_label">Promemoria</string>
    <string name="memos_list_fallback_title">Promemoria</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_memo_title">Titolo</string>
    <string name="label_memo_desc">Descrizione</string>
    <string name="add_memo_fragment_label">Aggiungi promemoria</string>
    <string name="label_memo_date_time">Scadenza</string>
    <string name="edit">Modifica</string>
    <string name="place">Luogo</string>
    <string name="search">Cerca</string>
    <string name="choose_from_map">Scegli dalla mappa</string>
    <string name="select">Seleziona</string>
    <string name="title_location_permission">Permessi di localizzazione in background</string>
    <string name="text_location_permission">L\'app utilizza i permessi di locazione per inviarti una notifica quando sei in un luogo con un promemoria attivo</string>
    <string name="cancel">Annulla</string>
    <string name="no_results">Nessun risultato</string>
    <string name="error_occurred_internet_connection">Si è verificato un errore\nVerifica la connessione a internet</string>
    <string name="no_empty_title">Il titolo non può essere vuoto</string>
    <string name="no_expiration">Seleziona una data di scadenza</string>
    <string name="delete">Elimina</string>
    <string name="mark_complete">Completato</string>
    <string name="completed">Completato</string>
    <string name="expired">Scaduto</string>
    <string name="active">Attivo</string>
    <string name="title_confirm_delete">Cancellare %1$s</string>
    <string name="desc_confirm_delete">Sei sicuro di voler cancellare questo memo?</string>
    <string name="deleted">Eliminato</string>
    <string name="restored">Ripristinato</string>
    <string name="not_completed">Non completato</string>
    <string name="show_completed">Mostra promemoria completati</string>
    <string name="show_expired">Mostra promemoria scaduti</string>
    <string name="show_active">Mostra promemoria attivi</string>
    <string name="expired_memos">Promemoria scaduti</string>
    <string name="completed_memos">Promemoria completati</string>
    <string name="no_memo">Non ci sono promemoria</string>
    <string name="no_completed_memo">Non ci sono promemoria completati</string>
    <string name="no_expired_memo">Non ci sono promemoria scaduti</string>
    <string name="error_occurred">Si è verificato un errore</string>
    <string name="details">Dettagli</string>
    <string name="error_no_geofence_notifications">Non è stato possibile attivare le notifiche basate sulla posizione dei promemoria</string>
    <string name="retry">Riprova</string>
    <string name="notification_channel_name">Posizione vicino promemoria</string>
    <string name="notification_channel_description">Notifiche di vicinanza a un promemoria</string>
    <string name="inside_memo_area">Sei nell\'area di un promemoria</string>
</resources>