<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.passolimirko.memorandum.MainActivity">
    <item
        android:id="@+id/action_showMemosInMap"
        android:icon="@drawable/ic_map_on_surface_color_24dp"
        android:orderInCategory="10"
        android:title="@string/action_showMemosInMap"
        app:showAsAction="ifRoom" />

    <group
        android:id="@+id/group_memosStatuses"
        android:orderInCategory="90">
        <item
            android:id="@+id/action_showActiveMemos"
            android:orderInCategory="91"
            android:title="@string/show_active"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_showExpiredMemos"
            android:orderInCategory="92"
            android:title="@string/show_expired"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_showCompletedMemos"
            android:orderInCategory="93"
            android:title="@string/show_completed"
            app:showAsAction="never" />
    </group>
</menu>