<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"

    tools:context=".fragments.AddMemoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_memo_title"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_memo_desc"
        app:layout_constraintTop_toBottomOf="@+id/tf_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_date_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/label_memo_date_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_edit_date_time"
        app:layout_constraintTop_toBottomOf="@+id/tf_desc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_edit_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/edit"
        app:layout_constraintBaseline_toBaselineOf="@+id/tf_date_time"

        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/place"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_date_time" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_place"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_search_place"
        app:layout_constraintTop_toBottomOf="@+id/tv_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_search_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:enabled="false"
        android:text="@string/search"

        app:layout_constraintBaseline_toBaselineOf="@+id/tf_place"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_choose_place_from_map"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/choose_from_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_place" />

</androidx.constraintlayout.widget.ConstraintLayout>