<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MemosListFragment">

    <fragment
        android:id="@+id/MemosListFragment"
        android:name="it.passolimirko.memorandum.fragments.MemosListFragment"
        android:label="@string/active_memos_fragment_label"
        tools:layout="@layout/fragment_memos_list">

        <action
            android:id="@+id/action_MemosListFragment_to_MemosMapFragment"
            app:destination="@id/MemosMapFragment" />
        <action
            android:id="@+id/action_MemosListFragment_to_MemoDetailFragment"
            app:destination="@id/MemoDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/MemosMapFragment"
        android:name="it.passolimirko.memorandum.fragments.MemosMapFragment"
        android:label="@string/memos_map_fragment_label"
        tools:layout="@layout/fragment_memos_map">

        <action
            android:id="@+id/action_MemosMapFragment_to_MemosListFragment"
            app:destination="@id/MemosListFragment" />
        <action
            android:id="@+id/action_MemosMapFragment_to_MemoDetailFragment"
            app:destination="@id/MemoDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/MemoDetailFragment"
        android:name="it.passolimirko.memorandum.fragments.MemoDetailFragment"
        android:label="@string/memo_detail_fragment_label"
        tools:layout="@layout/fragment_memo_detail" />

    <fragment
        android:id="@+id/AddMemoFragment"
        android:name="it.passolimirko.memorandum.fragments.AddMemoFragment"
        android:label="@string/add_memo_fragment_label"
        tools:layout="@layout/fragment_add_memo">

        <action
            android:id="@+id/action_AddMemoFragment_to_ChooseFromMapFragment"
            app:destination="@+id/ChooseFromMapFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/ChooseFromMapFragment"
        android:name="it.passolimirko.memorandum.fragments.ChooseFromMapFragment"
        tools:layout="@layout/fragment_choose_from_map" />

    <action
        android:id="@+id/To_AddMemoFragment"
        app:destination="@id/AddMemoFragment" />

</navigation>
